create_web_chronojump.pl now makes a printable page

--- a/web/html_created_no_edit/faq_es.html
+++ b/web/html_created_no_edit/faq_es.html
@@ -13,7 +13,6 @@
 		</head>
 
 		<body id="page-main" class="with-sidebar">
-
 		<table width="100%" border="0" cellspacing="0" cellpadding="0">
 		<tr><td align="left">
 		<div align="left"><img src="images/chronojump33.png" alt="logo" width="591" height="177" border="0">
@@ -47,7 +46,8 @@
 			<tr valign="top"><td align="left">
 
 			<div id="content">
-			<div id="content-body"><h4 id="top">FAQ de Chronojump - listado de preguntas frecuentes</h4>
+			<div id="content-body"><p align="right"><a href="print/faq_es.html"><font size="1"><tt>Versi&oacute;n imprimible
+</tt></font></a></p><h4 id="top">FAQ de Chronojump - listado de preguntas frecuentes</h4>
 
 <ol>
 <li><a href="#platform">Plataforma de contactos</a>
@@ -60,7 +60,7 @@
 <ol>
 <li>¿C&oacute;mo puedo construir la plataforma de contactos?
 <p>
-Siga las instrucciones descritas en esta p&aacute;gina web: [insertar enlace]
+Siga las instrucciones descritas en esta p&aacute;gina web: [INSERTAR ENLACE de p&aacute;gina web de constr. plataforma]
 
 <p><li>¿D&oacute;nde puedo comprar la plataforma de contactos? ¿Puedo vender la que he hecho yo?
 <p>
@@ -76,7 +76,7 @@ Por que todav&iacute;a nadie ha colaborado en ofrecer informaci&oacute;n sobre c
 
 <p><li>He descubierto una manera mejor de hacer la plataforma de contactos ¿d&oacute;nde puedo anunciarla?
 <p>
-Escribe un correo a [insertar enlace] y veremos c&oacute;mo podemos anunciar tu propuesta.
+Escribe un correo a [INSERTAR ENLACE de nueva lista de correo general en gnome] y veremos c&oacute;mo podemos anunciar tu propuesta.
 
 </ol>
 <p align="right"><a href="#top">Subir</a></p>
@@ -89,22 +89,22 @@ Escribe un correo a [insertar enlace] y veremos c&oacute;mo podemos anunciar tu 
 Los sistemas operativos modernos son multitarea, lo que significa que el ordenador asigna peque&ntilde;as cantidades de tiempo para la realizaci&oacute;n de cada una de las tareas de manera que parece que ejecuta todas a la vez. Si el ordenador se encarga de captar los est&iacute;mulos que proceden de la plataforma de contactos, en ocasiones ser&aacute; tard&iacute;o en advertir estos eventos porque estar&aacute; ocupado en otros <i>asuntos</i>, lo que se traduce en problemas de fiabilidad debido a que dos saltos de la misma duraci&oacute;n podr&iacute;an obtener mediciones distintas por circunstancias aleatorias.<br>
 El cron&oacute;metro externo que hemos construido est&aacute; especializado en la captaci&oacute;n de eventos en la plataforma de contactos por lo que no aparecer&aacute;n errores de fiabilidad en sus registros.<br>
 Chronopic permitir&aacute; adem&aacute;s que se pueda usar Chronojump o su versi&oacute;n reducida Chronojump-mini en casi cualquier dispositivo electr&oacute;nico, y asegura una buena compatibilidad hacia el futuro.<br>
-Para m&aacute;s informaci&oacute;n lea este art&iacute;culo: [INSERTAR ENLACE]
+Para m&aacute;s informaci&oacute;n lea este art&iacute;culo: [INSERTAR ENLACE de art&iacute;culo de congreso Galicia]
 
 <p><li>He le&iacute;do que el cron&oacute;metro actual es un prototipo, ¿cuando estar&aacute; la versi&oacute;n final disponible?
 <p>
 Para la construcci&oacute;n de chronopic se ha usado la tarjeta entrenadora de robots Skypic debido a que es hardware libre, est&aacute; documentada su construcci&oacute;n, es posible su compra directa y est&aacute; convenientemente validada. 
 <br>Hasta la fecha se dispone de una tarjeta de expansi&oacute;n que permite conectar Skypic con la plataforma de contactos y un software (firmware) que permite que Skypic sea completamente funcional para la detecci&oacute;n de estados y eventos en la plataforma de contactos. <br>
 M&aacute;s delante se crear&aacute; la tarjeta Chronopic, con menos instrumentaciones que Skypic, de reducidas dimensiones y que podr&aacute; ser fabricada facilmente o adquirida por bajo precio (15-30 euros en Espa&ntilde;a).<br>
-Para m&aacute;s informaci&oacute;n lea esta p&aacute;gina web: [INSERTAR ENLACE]
+Para m&aacute;s informaci&oacute;n lea esta p&aacute;gina web: [INSERTAR ENLACE de p&aacute;ginas de Juań Gonz&aacute;lez sobre Chronopic]
 
 <p><li>¿C&oacute;mo puedo construir el cron&oacute;metro?<p>
 <p>
-Dispone de informaci&oacute;n completa en esta p&aacute;gina web: [INSERTAR ENLACE]. Si no tiene conocimientos en electr&oacute;nica, pida ayuda en esta materia a alg&uacute;n conocido o empresa local.
+Dispone de informaci&oacute;n completa en esta p&aacute;gina web: [INSERTAR ENLACE de p&aacute;ginas de Juań Gonz&aacute;lez sobre Chronopic]. Si no tiene conocimientos en electr&oacute;nica, pida ayuda en esta materia a alg&uacute;n conocido o empresa local.
 
 <p><li>¿D&oacute;nde puedo comprar el cron&oacute;metro?
 <p>
-La empresa IFARA de Madrid comercializa en Espa&ntilde;a Skypic + tarjeta de expansi&oacute;n + firmware de Chronopic (software necesario para la tarjeta) por 70 euros. M&aacute;s informaci&oacute;n en este correo electr&oacute;nico: [INSERTAR ENLACE].<br>
+La empresa IFARA de Madrid comercializa en Espa&ntilde;a Skypic + tarjeta de expansi&oacute;n + firmware de Chronopic (software necesario para la tarjeta) por 70 euros. M&aacute;s informaci&oacute;n en este correo electr&oacute;nico: [INSERTAR ENLACE de correo en donde se anunciaba].<br>
 Si usted quiere fabricar y vender Skypic + tarjeta de expansi&oacute;n + firmware de Chronopic en Espa&ntilde;a o en cualquier otro pa&iacute;s, no dude a ponerse en contacto con nosotros para que hagamos publicidad de su servicio.
 
 </ol>
@@ -113,9 +113,9 @@ Si usted quiere fabricar y vender Skypic + tarjeta de expansi&oacute;n + firmwar
 <h5 id="chronojump">Software Chronojump</h5>
 
 <ol>
-<li>¿Puedo acceder al c&oacute;digo fuente y modificar el programa, y venderlo?
+<li>¿Puedo acceder al c&oacute;digo fuente y modificar el programa?, ¿y venderlo?
 <p>
-Chronojump es software libre distribuido bajo los t&eacute;rminos de la licencia GPL [enlace], lo que le permite estudiarlo, modificarlo, redistribuirlo, venderlo siempre respetando la citada licencia. Para m&aacute;s informaci&oacute;n acceda a la p&aacute;gina web de GPL en la Wikipedia [INSERTAR ENLACE]
+Chronojump es software libre distribuido bajo los t&eacute;rminos de la <a href="http://www.gnu.org/licenses/licenses.html#GPL">licencia GPL</a>, lo que le permite estudiarlo, modificarlo, redistribuirlo, venderlo siempre respetando la citada licencia. Para m&aacute;s informaci&oacute;n acceda a la p&aacute;gina web de <a href="http://es.wikipedia.org/wiki/GPL">GPL en la Wikipedia</a>.
 
 <p><li>¿Cu&aacute;nto dinero cuesta?
 <p>
@@ -123,12 +123,12 @@ En la web siempre habr&aacute; una versi&oacute;n de Chronojump gratuita, pero u
 
 <p><li>¿En qu&eacute; sistemas operativos y equipos inform&aacute;ticos funciona?
 <p>
-Chronojump est&aacute; escrito para la plataforma de programaci&oacute;n MONO [INSERTAR ENLACE], que ha sido concebida para facilitar que los programas inform&aacute;ticos funcionen un muchos sistemas operativos y equipamientos inform&aacute;ticos. Hasta el momento s&oacute;lo funciona en sistemas GNU/Linux, pero se facilita un Live-CD que permite que en cualquier ordenador PC (con sistemas operativos Linux, Windows, FreeBSD o cualquier otro) puedan usar Chronojump.<br>
+Chronojump est&aacute; escrito para la plataforma de programaci&oacute;n MONO [INSERTAR ENLACE], que ha sido concebida para facilitar que los programas inform&aacute;ticos funcionen un muchos sistemas operativos y equipamientos inform&aacute;ticos. Hasta el momento s&oacute;lo funciona en sistemas GNU/Linux, pero se facilita un Live-CD que permite que desde cualquier ordenador PC (con sistemas operativos Linux, Windows, FreeBSD o cualquier otro) pueda usar Chronojump.<br>
 Para mitades de primavera de 2006 se prev&eacute; que habr&aacute; una versi&oacute;n para windows que se pueda ejecutar sin necesidad del Live-CD.
 
 <p><li>¿C&oacute;mo puedo descargar (download) el programa?
 <p>
-Lea este correo electr&oacute;nico: [INSERTAR ENLACE]
+Acceda a la p&aacute;gina web de instalaci&oacute;n de Chronojump [INSERTAR ENLACE]
 
 <p><li>¿Puedo probar Chronojump sin tener el cron&oacute;metro ni la plataforma de contactos?
 <p>
