title in a table with Print. articleLink, webLink, manualLink

--- a/web/html_created_no_edit/faq_es.html
+++ b/web/html_created_no_edit/faq_es.html
@@ -46,8 +46,10 @@
 			<tr valign="top"><td align="left">
 
 			<div id="content">
-			<div id="content-body"><p align="right"><a href="print/faq_es.html"><font size="1"><tt>Versi&oacute;n imprimible
-</tt></font></a></p><h4 id="top">FAQ de Chronojump - listado de preguntas frecuentes</h4>
+			<div id="content-body"><table border="0" width="100%"><tr><td align="left"><h4 id="top">
+FAQ de Chronojump - listado de preguntas frecuentes
+</h4></td><td align="right"><a href="print/faq_es.html"><font size="1"><tt>Versi&oacute;n imprimible
+</tt></font></a></td></tr></table>
 
 <ol>
 <li><a href="#platform">Plataforma de contactos</a>
