fixed bug in printed report (some persons doesn't shown, and order was not correct)
0.4 in About

fixed getInitialSpeed, formula was bad

chronopicInit only if non simulated

changed chars separating data in gui/report.cs from '\n' to '\t' for solving bug in spanish translation. In the future, scape possible '\t' in any translation

--- a/web/html_created_no_edit/faq_es.html
+++ b/web/html_created_no_edit/faq_es.html
@@ -62,7 +62,7 @@ FAQ de Chronojump - listado de preguntas frecuentes
 <ol>
 <li>¿C&oacute;mo puedo construir la plataforma de contactos?
 <p>
-Siga las instrucciones descritas en esta p&aacute;gina web: [INSERTAR ENLACE de p&aacute;gina web de constr. plataforma]
+Siga las instrucciones descritas en esta p&aacute;gina web: <a href="construction_contact_platform_es.html">"Instrucciones para la construcci&oacute;n de una plataforma de contactos para la medici&oacute;n de la capacidad de salto/s"</a>.
 
 <p><li>¿D&oacute;nde puedo comprar la plataforma de contactos? ¿Puedo vender la que he hecho yo?
 <p>
@@ -78,7 +78,7 @@ Por que todav&iacute;a nadie ha colaborado en ofrecer informaci&oacute;n sobre c
 
 <p><li>He descubierto una manera mejor de hacer la plataforma de contactos ¿d&oacute;nde puedo anunciarla?
 <p>
-Escribe un correo a [INSERTAR ENLACE de nueva lista de correo general en gnome] y veremos c&oacute;mo podemos anunciar tu propuesta.
+Escribe un correo a la lista <a href="contact_es.html">chronojump-list</a> y veremos c&oacute;mo podemos anunciar tu propuesta.
 
 </ol>
 <p align="right"><a href="#top">Subir</a></p>
@@ -91,22 +91,22 @@ Escribe un correo a [INSERTAR ENLACE de nueva lista de correo general en gnome] 
 Los sistemas operativos modernos son multitarea, lo que significa que el ordenador asigna peque&ntilde;as cantidades de tiempo para la realizaci&oacute;n de cada una de las tareas de manera que parece que ejecuta todas a la vez. Si el ordenador se encarga de captar los est&iacute;mulos que proceden de la plataforma de contactos, en ocasiones ser&aacute; tard&iacute;o en advertir estos eventos porque estar&aacute; ocupado en otros <i>asuntos</i>, lo que se traduce en problemas de fiabilidad debido a que dos saltos de la misma duraci&oacute;n podr&iacute;an obtener mediciones distintas por circunstancias aleatorias.<br>
 El cron&oacute;metro externo que hemos construido est&aacute; especializado en la captaci&oacute;n de eventos en la plataforma de contactos por lo que no aparecer&aacute;n errores de fiabilidad en sus registros.<br>
 Chronopic permitir&aacute; adem&aacute;s que se pueda usar Chronojump o su versi&oacute;n reducida Chronojump-mini en casi cualquier dispositivo electr&oacute;nico, y asegura una buena compatibilidad hacia el futuro.<br>
-Para m&aacute;s informaci&oacute;n lea este art&iacute;culo: [INSERTAR ENLACE de art&iacute;culo de congreso Galicia]
+Para m&aacute;s informaci&oacute;n lea este art&iacute;culo: <a href="http://www.gnome.org/projects/chronojump/articles/chronojump_sistema_de_medida_congreso_gpul.pdf">"Proyecto Chronojump: Sistema de Medida de la Capacidad de Salto usando Software y Hardware Libres"</a>.
 
 <p><li>He le&iacute;do que el cron&oacute;metro actual es un prototipo, ¿cuando estar&aacute; la versi&oacute;n final disponible?
 <p>
 Para la construcci&oacute;n de chronopic se ha usado la tarjeta entrenadora de robots Skypic debido a que es hardware libre, est&aacute; documentada su construcci&oacute;n, es posible su compra directa y est&aacute; convenientemente validada. 
 <br>Hasta la fecha se dispone de una tarjeta de expansi&oacute;n que permite conectar Skypic con la plataforma de contactos y un software (firmware) que permite que Skypic sea completamente funcional para la detecci&oacute;n de estados y eventos en la plataforma de contactos. <br>
 M&aacute;s delante se crear&aacute; la tarjeta Chronopic, con menos instrumentaciones que Skypic, de reducidas dimensiones y que podr&aacute; ser fabricada facilmente o adquirida por bajo precio (15-30 euros en Espa&ntilde;a).<br>
-Para m&aacute;s informaci&oacute;n lea esta p&aacute;gina web: [INSERTAR ENLACE de p&aacute;ginas de Juań Gonz&aacute;lez sobre Chronopic]
+Para m&aacute;s informaci&oacute;n lea esta p&aacute;gina web: <a href="http://www.iearobotics.com/personal/juan/proyectos/chronopic/1.0/">documentaci&oacute;n de Chronopic 1.0 y el prototipo 1</a>.
 
 <p><li>¿C&oacute;mo puedo construir el cron&oacute;metro?<p>
 <p>
-Dispone de informaci&oacute;n completa en esta p&aacute;gina web: [INSERTAR ENLACE de p&aacute;ginas de Juań Gonz&aacute;lez sobre Chronopic]. Si no tiene conocimientos en electr&oacute;nica, pida ayuda en esta materia a alg&uacute;n conocido o empresa local.
+Dispone de informaci&oacute;n completa en esta p&aacute;gina web: <a href="http://www.iearobotics.com/personal/juan/proyectos/chronopic/1.0/">documentaci&oacute;n de Chronopic 1.0 y el prototipo 1</a>. Si no tiene conocimientos en electr&oacute;nica, pida ayuda en esta materia a alg&uacute;n conocido o empresa local.
 
 <p><li>¿D&oacute;nde puedo comprar el cron&oacute;metro?
 <p>
-La empresa IFARA de Madrid comercializa en Espa&ntilde;a Skypic + tarjeta de expansi&oacute;n + firmware de Chronopic (software necesario para la tarjeta) por 70 euros. M&aacute;s informaci&oacute;n en este correo electr&oacute;nico: [INSERTAR ENLACE de correo en donde se anunciaba].<br>
+La empresa IFARA de Madrid comercializa en Espa&ntilde;a Skypic + tarjeta de expansi&oacute;n + firmware de Chronopic (software necesario para la tarjeta) por 70 euros. M&aacute;s informaci&oacute;n en este correo electr&oacute;nico: <a href="http://mail.gnome.org/archives/chronojump-list/2005-October/msg00002.html">Adquisici&oacute;n del Prototipo I de la chronopic</a>.<br>
 Si usted quiere fabricar y vender Skypic + tarjeta de expansi&oacute;n + firmware de Chronopic en Espa&ntilde;a o en cualquier otro pa&iacute;s, no dude a ponerse en contacto con nosotros para que hagamos publicidad de su servicio.
 
 </ol>
@@ -125,12 +125,12 @@ En la web siempre habr&aacute; una versi&oacute;n de Chronojump gratuita, pero u
 
 <p><li>¿En qu&eacute; sistemas operativos y equipos inform&aacute;ticos funciona?
 <p>
-Chronojump est&aacute; escrito para la plataforma de programaci&oacute;n MONO [INSERTAR ENLACE], que ha sido concebida para facilitar que los programas inform&aacute;ticos funcionen un muchos sistemas operativos y equipamientos inform&aacute;ticos. Hasta el momento s&oacute;lo funciona en sistemas GNU/Linux, pero se facilita un Live-CD que permite que desde cualquier ordenador PC (con sistemas operativos Linux, Windows, FreeBSD o cualquier otro) pueda usar Chronojump.<br>
+Chronojump est&aacute; escrito para la plataforma de programaci&oacute;n <a href="http://www.mono-project.com">MONO</a>, que ha sido concebida para facilitar que los programas inform&aacute;ticos funcionen un muchos sistemas operativos y equipamientos inform&aacute;ticos. Hasta el momento s&oacute;lo funciona en sistemas GNU/Linux, pero se facilita un Live-CD que permite que desde cualquier ordenador PC (con sistemas operativos Linux, Windows, FreeBSD o cualquier otro) pueda usar Chronojump.<br>
 Para mitades de primavera de 2006 se prev&eacute; que habr&aacute; una versi&oacute;n para windows que se pueda ejecutar sin necesidad del Live-CD.
 
 <p><li>¿C&oacute;mo puedo descargar (download) el programa?
 <p>
-Acceda a la p&aacute;gina web de instalaci&oacute;n de Chronojump [INSERTAR ENLACE]
+Acceda a la p&aacute;gina web de <a href="installation_es.html">instalaci&oacute;n de Chronojump</a>.
 
 <p><li>¿Puedo probar Chronojump sin tener el cron&oacute;metro ni la plataforma de contactos?
 <p>
@@ -138,12 +138,12 @@ S&iacute;, se ha creado un modo simulado en que se ejecutan saltos y carreras de
 
 <p><li>¿Cu&aacute;ndo saldr&aacute; la versi&oacute;n 1.0 y qu&eacute; prestaciones tendr&aacute;?
 <p>
-Hasta la fecha (a punto de salir la versi&oacute;n 0.4) Chronojump ya tiene m&aacute;s prestaciones que el resto de soluciones comerciales y no-comerciales de las que tenemos conocimiento. Pero a&uacute;n hay muchos aspectos a incorporar-mejorar que se van describiendo en el archivo de <i>roadmap</i> o hoja de ruta: [INSERTAR ENLACE] (ingl&eacute;s).<br>
-Si desea realizar peticiones de caracter&iacute;sticas no dude en escribir un correo a: [INSERTAR ENLACE].
+Hasta la fecha (a punto de salir la versi&oacute;n 0.4) Chronojump ya tiene m&aacute;s prestaciones que el resto de soluciones comerciales y no-comerciales de las que tenemos conocimiento. Pero a&uacute;n hay muchos aspectos a incorporar-mejorar que se van describiendo en el archivo de <a href="http://cvs.gnome.org/viewcvs/chronojump/roadmap.txt"><i>roadmap</i> o hoja de ruta</a> (ingl&eacute;s).<br>
+Si desea realizar peticiones de caracter&iacute;sticas no dude en escribir un correo a la lista de correo <a href="contact_es.html">chronojump-list</a>.
 
 <p><li>¿C&oacute;mo puedo saber las &uacute;ltimas novedades del proyecto?
 <p>
-Inscr&iacute;base a la lista de correo: [INSERTAR ENLACE] o consulte sus archivos disponibles aqu&iacute;: [INSERTAR ENLACE]. Adem&aacute;s puede consultar el archivo <i>changelog</i> o registro de cambios: [INSERTAR ENLACE].
+Inscr&iacute;base o consulte los acrivos de las <a href="contact_es.html">listas de correo</a>. Adem&aacute;s puede consultar el archivo <a href="http://cvs.gnome.org/viewcvs/chronojump/changelog.txt"><i>changelog</i> o registro de cambios</a>.
 
 <p><li>¿Por qu&eacute; se llama Chronojump si tambi&eacute;n sirve para medir carreras?
 <p>
@@ -151,7 +151,7 @@ La idea inicial era crear un software para la medici&oacute;n de eventos tempora
 
 <p><li>Me gustar&iacute;a colaborar ¿c&oacute;mo puedo hacerlo?
 <p>
-Escriba a la lista de correo: [INSERTAR ENLACE] pres&eacute;ntese, expl&iacute;quenos por qu&eacute; quiere colaborar y cu&aacute;les son sus conocimientos.
+Escriba a la lista de correo <a href="contact_es.html">chronojump-devel-list</a> pres&eacute;ntese, expl&iacute;quenos por qu&eacute; quiere colaborar y cu&aacute;les son sus conocimientos.
 
 </ol>
 <p align="right"><a href="#top">Subir</a></p>
@@ -160,7 +160,7 @@ Escriba a la lista de correo: [INSERTAR ENLACE] pres&eacute;ntese, expl&iacute;q
 <div id="sidebar">
 				<h3>Licencia</h3>
 				<p>
-					ChronoJump es <a href="http://es.wikipedia.org/wiki/Software_Libre">software&nbsp;libre</a> distribuido bajo la Licencia <a href="http://es.wikipedia.org/wiki/GPL">GPL</a>. El <em>c&oacute;digo fuente</em> <a href="http://cvs.software-libre.org/cgi-bin/cvsweb.cgi/chronojump/?cvsroot=chronojump">del&nbsp;programa</a> y <a href="http://cvs.software-libre.org/cgi-bin/cvsweb.cgi/chronopic/?cvsroot=chronojump">del&nbsp;cron&oacute;metro</a> puede ser consultado, as&iacute; como modificado y redistribuido.<br><br>
+					ChronoJump es <a href="http://es.wikipedia.org/wiki/Software_Libre">software&nbsp;libre</a> distribuido bajo la Licencia <a href="http://es.wikipedia.org/wiki/GPL">GPL</a>. El <em>c&oacute;digo fuente</em> <a href="http://cvs.gnome.org/viewcvs/chronojump/">del&nbsp;programa y del&nbsp;cron&oacute;metro</a> puede ser consultado, as&iacute; como modificado y redistribuido.<br><br>
 					Se facilitan instrucciones de construcci&oacute;n de la plataforma de contactos y el cron&oacute;metro.<br><br>
 					No es posible verificar la validez y fiabilidad de un instrumento inform&aacute;tico de medida si no se facilita el <em>c&oacute;digo&nbsp;fuente</em>. Por esta raz&oacute;n ChronoJump es &oacute;ptimo para la investigaci&oacute;n.
 			      </p>
@@ -178,7 +178,7 @@ Escriba a la lista de correo: [INSERTAR ENLACE] pres&eacute;ntese, expl&iacute;q
 
 				<h3>Contribuyen</h3>
 				<br><a href="http://www.deporteyciencia.com"><img src="images/deporteyciencia.png" width="88" height="110" border="0" alt="deporteyciencia.com sitio colaborativo en ciencias del deporte"></a>
-<br><br><A href="http://software-libre.org"><IMG src="http://software-libre.org/sflogo.php?group_id=63" width="88" height="31" border="0" alt="software-libre.org Logo"></A>
+<br><br><A href="http://gnome.org"><IMG src="http://bugzilla.gnome.org/images/gnome-64.png" width="64" height="64" border="0" alt="GNOME"></A>
 <br><br><A href="http://memnon.ii.uam.es/"><IMG src="images/crl_logo_88.png" width="88" height="35" border="0" alt="Centro de Referencia Linux"></A>
 
 </div>
