new window: repair_sub_events, allows repair reactive jumps by parts (future also inherit runs). Currently can add, edit, remove subjumps (different actions depending on jumpType and selected row) TODO: record the new data
BUG fixed in detection of it startsIn in Rjs creation
BUG fixed in ChangeDecimalSeparator when no data is selected (affects edit jumps and runs)

--- a/web/html_created_no_edit/faq_es.html
+++ b/web/html_created_no_edit/faq_es.html
@@ -24,7 +24,7 @@
 <ul>
 <li>Catal&agrave; (pending)
 <li>Deutsch (pending)
-<li>English (pending)
+<li><a href="faq.html">English</a>
 <li>Fran&ccedil;ais (pending)
 <li>Portugu&ecirc;s (pending)
 </ul><br><br>
