documents in galego to UTF-8

--- a/web/html_created_no_edit/faq_es.html
+++ b/web/html_created_no_edit/faq_es.html
@@ -26,7 +26,9 @@
 <li>Deutsch (pending)
 <li><a href="faq.html">English</a>
 <li>Fran&ccedil;ais (pending)
-<li>Portugu&ecirc;s (pending)
+<li><a href="faq_gl.html">Galego</a>
+<li>Italiano (pending)
+<li><a href="faq_pt.html">Portugu&ecirc;s</a>
 </ul><br><br>
 </div></td></tr></table>
 <ul id=nav-top>
