dialogMessage (with an icon) prints info when starting in Simulated mode, and when auto-changing to simulated because there are problems with chronopic
little changes in platform radiobuttons callbacks

--- a/web/html_created_no_edit/faq_es.html
+++ b/web/html_created_no_edit/faq_es.html
@@ -127,8 +127,7 @@ En la web siempre habr&aacute; una versi&oacute;n de Chronojump gratuita, pero u
 
 <p><li>¿En qu&eacute; sistemas operativos y equipos inform&aacute;ticos funciona?
 <p>
-Chronojump est&aacute; escrito para la plataforma de programaci&oacute;n <a href="http://www.mono-project.com">MONO</a>, que ha sido concebida para facilitar que los programas inform&aacute;ticos funcionen un muchos sistemas operativos y equipamientos inform&aacute;ticos. Hasta el momento s&oacute;lo funciona en sistemas GNU/Linux, pero se facilita un Live-CD que permite que desde cualquier ordenador PC (con sistemas operativos Linux, Windows, FreeBSD o cualquier otro) pueda usar Chronojump.<br>
-Para mitades de primavera de 2006 se prev&eacute; que habr&aacute; una versi&oacute;n para windows que se pueda ejecutar sin necesidad del Live-CD.
+Chronojump est&aacute; escrito para la plataforma de programaci&oacute;n <a href="http://www.mono-project.com">MONO</a>, que ha sido concebida para facilitar que los programas inform&aacute;ticos funcionen un muchos sistemas operativos y equipamientos inform&aacute;ticos. Hasta el momento funciona en sistemas GNU/Linux y en Windows.<br>
 
 <p><li>¿C&oacute;mo puedo descargar (download) el programa?
 <p>
@@ -179,9 +178,8 @@ Escriba a la lista de correo <a href="contact_es.html">chronojump-devel-list</a>
 </ul>
 
 				<h3>Contribuyen</h3>
-				<br><a href="http://www.deporteyciencia.com"><img src="images/deporteyciencia.png" width="88" height="110" border="0" alt="deporteyciencia.com sitio colaborativo en ciencias del deporte"></a>
-<br><br><A href="http://gnome.org"><IMG src="http://bugzilla.gnome.org/images/gnome-64.png" width="64" height="64" border="0" alt="GNOME"></A>
-<br><br><A href="http://memnon.ii.uam.es/"><IMG src="images/crl_logo_88.png" width="88" height="35" border="0" alt="Centro de Referencia Linux"></A>
+				<br><a href="http://www.deporteyciencia.com"><img src="images/deporteyciencia_blues.png" width="88" height="110" border="0" alt="deporteyciencia.com sitio colaborativo en ciencias del deporte"></a>
+<br><br><A href="http://gnome.org"><IMG src="images/gnome_logo_88_blues.png" width="88" height="137" border="0" alt="GNOME"></A>
 
 </div>
 </td></tr></table>
