minor RELEASE 0.48 for windows and Linux

--- a/web/html_created_no_edit/faq_es.html
+++ b/web/html_created_no_edit/faq_es.html
@@ -135,7 +135,7 @@ Acceda a la p&aacute;gina web de <a href="installation_es.html">instalaci&oacute
 
 <p><li>¿Puedo probar Chronojump sin tener el cron&oacute;metro ni la plataforma de contactos?
 <p>
-S&iacute;, se ha creado un modo simulado en que se ejecutan saltos y carreras de duraci&oacute;n aleatoria para que pueda probar las caracter&iacute;sticas del programa. Adem&aacute;s se incorpora una base de datos de muestra.
+S&iacute;, se ha creado un modo simulado en que se ejecutan saltos, carreras de duraci&oacute;n aleatoria y ritmos para que pueda probar las caracter&iacute;sticas del programa.
 
 <p><li>¿Cu&aacute;ndo saldr&aacute; la versi&oacute;n 1.0 y qu&eacute; prestaciones tendr&aacute;?
 <p>
@@ -148,7 +148,7 @@ Inscr&iacute;base o consulte los acrivos de las <a href="contact_es.html">listas
 
 <p><li>¿Por qu&eacute; se llama Chronojump si tambi&eacute;n sirve para medir carreras?
 <p>
-La idea inicial era crear un software para la medici&oacute;n de eventos temporales del salto, pero se ha visto que con poco esfuerzo el mismo software puede servir para cronometrar todo tipo de carreras. Aunque se trabaja en estas l&iacute;neas y a medio plazo se a&ntilde;adir&aacute; la de estudio de ritmos, los esfuerzos principales se destinan a la medici&oacute;n de saltos, por este motivo Chronojump conserva su nombre inicial.
+La idea inicial era crear un software para la medici&oacute;n de eventos temporales del salto, pero se ha visto que con poco esfuerzo el mismo software puede servir para cronometrar todo tipo de carreras y ritmos. Aunque se trabaja en estas l&iacute;neas, los esfuerzos principales se destinan a la medici&oacute;n de saltos, por este motivo Chronojump conserva su nombre inicial.
 
 <p><li>Me gustar&iacute;a colaborar ¿c&oacute;mo puedo hacerlo?
 <p>
