Added chronojump glossary for translators

--- a/web/html_created_no_edit/faq_es.html
+++ b/web/html_created_no_edit/faq_es.html
@@ -173,8 +173,9 @@ Escriba a la lista de correo <a href="contact_es.html">chronojump-devel-list</a>
 
 				<h3>Colaboradores</h3>
 				<ul>
-<li><a href="mailto:tartesos2@telefonica.net">Jos&eacute; Pichardo</a>
 <li><a href="mailto:marchesedavid@yahoo.com.ar">David Marchese</a>
+<li><a href="mailto:juanfer@juanfer.com.ar">Juan Fernando Pardo</a>
+<li><a href="http://www.bortoleto.com/malu.htm">Maria Luisa Belloto</a>
 </ul>
 
 				<h3>Contribuyen</h3>
