changed image inclusion

--- a/glossary/chronojump_glossary_for_translators.html
+++ b/glossary/chronojump_glossary_for_translators.html
@@ -13,6 +13,7 @@
  span.overacc1 {position: relative;  left: .6em; top: -1.2ex;} --></style>
  
 
+
 <title> Glossary for Chronojump Translators</title>
     
 <h1 align="center">Glossary for Chronojump Translators </h1>
@@ -31,8 +32,8 @@ this document briefly, this guide was thought for being short and
 practical.
 
 <div class="p"><!----></div>
+<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema.png">
 
-<center><img src="/tmp/lyx_tmpdir762WmxK2c/lyx_tmpbuf0/0_home_xavier_progs_meus_chronojump_chronojump_glossary_images_chronojump_esquema.png" alt="/tmp/lyx_tmpdir762WmxK2c/lyx_tmpbuf0/0_home_xavier_progs_meus_chronojump_chronojump_glossary_images_chronojump_esquema.png" /></center>
 
 <div class="p"><!----></div>
 
@@ -100,7 +101,8 @@ currently there are no manufacturers selling this model.
 </li>
 </ul>
 
-<center><img src="/tmp/lyx_tmpdir762WmxK2c/lyx_tmpbuf0/1_home_xavier_progs_meus_chronojump_chronojump_glossary_images_chronopic_foto.jpg" alt="/tmp/lyx_tmpdir762WmxK2c/lyx_tmpbuf0/1_home_xavier_progs_meus_chronojump_chronojump_glossary_images_chronopic_foto.jpg" /></center></dd>
+<img src="http://www.gnome.org/projects/chronojump/images/chronopic_foto.jpg">
+</dd>
  <dt><b>CMJ</b></dt>
 	<dd>(See <i><u>Countermovement jump</u></i><a href="#des:CountermovementJump">*</a>).</dd>
  <dt><b><a name="des:CountermovementJump">
@@ -214,8 +216,8 @@ is not in the platform is used to determine the speed. The platform
 can be easily built following this instructions: <a href="http://www.gnome.org/projects/chronojump/construction_contact_platform.html"><tt>http://www.gnome.org/projects/chronojump/construction_contact_platform.html</tt></a>
 
 <div class="p"><!----></div>
-
-<center><img src="/tmp/lyx_tmpdir762WmxK2c/lyx_tmpbuf0/2_home_xavier_progs_meus_chronojump_chronojump_glossary_images_plataforma_contactos_final.jpg" alt="/tmp/lyx_tmpdir762WmxK2c/lyx_tmpbuf0/2_home_xavier_progs_meus_chronojump_chronojump_glossary_images_plataforma_contactos_final.jpg" /></center></dd>
+<img src="http://www.gnome.org/projects/chronojump/images/plataforma_contactos_final.jpg">
+</dd>
  <dt><b><a name="des:Pulse">
 </a>Pulse</b></dt>
 	<dd>We call 'pulse' to the ability of a person
@@ -271,7 +273,8 @@ the tracks have the same distance. This run is limited (ended) by:
 </ul></dd>
 </dl>
 
-<center><img src="/tmp/lyx_tmpdir762WmxK2c/lyx_tmpbuf0/3_home_xavier_progs_meus_chronojump_chronojump_glossary_images_chronojump_esquema_two_platforms.png" alt="/tmp/lyx_tmpdir762WmxK2c/lyx_tmpbuf0/3_home_xavier_progs_meus_chronojump_chronojump_glossary_images_chronojump_esquema_two_platforms.png" /></center></dd>
+<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_two_platforms.png">
+</dd>
  <dt><b><a name="des:Runner">
 </a>Runner</b></dt>
 	<dd>The name of a <i><u>person<a href="#des:Person">*</a></u></i>
@@ -317,5 +320,5 @@ a Intervallic <i><u>Run</u></i><a href="#des:Run">*</a>.</dd>
 T<sub><font size="-1">E</font></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><font size="-1">T</font></sub>H</a>,
-version 3.67.<br />On  3 Oct 2006, 21:30.</small>
+version 3.67.<br />On  3 Oct 2006, 21:44.</small>
 </html>
