free hardware -> open hardware http://mail.gnome.org/archives/chronojump-devel-list/2006-October/msg00003.html

--- a/glossary/chronojump_glossary_for_translators.html
+++ b/glossary/chronojump_glossary_for_translators.html
@@ -81,14 +81,14 @@ website, ...</dd>
 time. In Chronojump project we use <i><u>Chronopic</u></i><a href="#des:Chronopic">*</a>.</dd>
  <dt><b><a name="des:Chronopic">
 </a>Chronopic</b></dt>
-	<dd>Free Hardware used for recording
+	<dd>Open Hardware used for recording
 and managing the changes detected on the <i><u>Platform</u></i><a href="#des:Platform">*</a>.
 At this moment there are two Chronopic models (both using same firmware): 
 
 <div class="p"><!----></div>
 
 <ul>
-<li> One is derived from Skypic: free hardware for controlling little robots,
+<li> One is derived from Skypic: open hardware for controlling little robots,
 vastly used but with lots of unnecessary components. This link points
 out how to build it and how to buy it <a href="http://www.gnome.org/projects/chronojump/construction.html"><tt>http://www.gnome.org/projects/chronojump/construction.html</tt></a>
 <div class="p"><!----></div>
