Changes on link to installation mails and svn
svn path=/trunk/; revision=200

--- a/web/html_created_no_edit/faq_es.html
+++ b/web/html_created_no_edit/faq_es.html
@@ -161,7 +161,7 @@ Escriba a la lista de correo <a href="contact_es.html">chronojump-devel-list</a>
 <div id="sidebar">
 				<h3>Licencia</h3>
 				<p>
-					ChronoJump es <a href="http://es.wikipedia.org/wiki/Software_Libre">software&nbsp;libre</a> distribuido bajo la Licencia <a href="http://es.wikipedia.org/wiki/GPL">GPL</a>. El <em>c&oacute;digo fuente</em> <a href="http://cvs.gnome.org/viewcvs/chronojump/">del&nbsp;programa y del&nbsp;cron&oacute;metro</a> puede ser consultado, as&iacute; como modificado y redistribuido.<br><br>
+					ChronoJump es <a href="http://es.wikipedia.org/wiki/Software_Libre">software&nbsp;libre</a> distribuido bajo la Licencia <a href="http://es.wikipedia.org/wiki/GPL">GPL</a>. El <em>c&oacute;digo fuente</em> <a href="http://svn.gnome.org/viewcvs/chronojump/trunk/">del&nbsp;programa y del&nbsp;cron&oacute;metro</a> puede ser consultado, as&iacute; como modificado y redistribuido.<br><br>
 					Se facilitan instrucciones de construcci&oacute;n de la plataforma de contactos y el cron&oacute;metro.<br><br>
 					No es posible verificar la validez y fiabilidad de un instrumento inform&aacute;tico de medida si no se facilita el <em>c&oacute;digo&nbsp;fuente</em>. Por esta raz&oacute;n ChronoJump es &oacute;ptimo para la investigaci&oacute;n.
 			      </p>
