--- a/glossary/chronojump_glossary_for_translators.html
+++ b/glossary/chronojump_glossary_for_translators.html
@@ -11,12 +11,16 @@
  span.roman {font-family: serif; font-style: normal; font-weight: normal;} 
  span.overacc2 {position: relative;  left: .8em; top: -1.2ex;}
  span.overacc1 {position: relative;  left: .6em; top: -1.2ex;} --></style>
- 
-
-
 <title> Glossary for Chronojump Translators</title>
     
 <h1 align="center">Glossary for Chronojump Translators </h1>
+
+<h2 align="center">March, 22, 2007</h2>
+
+<div class="p"><!----></div>
+
+<!--remember to delete the first lines from to tittles (bug of lyx-&#62;html
+conversor, and to put real '&lt;' and '&#62;' on both pngs and jpgs-->
 
 <div class="p"><!----></div>
 ChronoJump, is a "complete multiplatform system for measurement,
@@ -32,8 +36,10 @@ this document briefly, this guide was thought for being short and
 practical.
 
 <div class="p"><!----></div>
-<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema.png">
 
+<center>
+<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_jump_300.png">
+</center>
 
 <div class="p"><!----></div>
 
@@ -63,25 +69,31 @@ people who perform a specific jump, run or pulses.
 <dl compact="compact">
  <dt><b><a name="des:AbalakovJump">
 </a>Abalakov&nbsp;Jump</b></dt>
-	<dd>(also called "ABK")
+	<dd> (also called "ABK")
 a kind of <i><u>simple jump<a href="#des:Jump">*</a></u></i> (we recommend
 not to translate the term).</dd>
  <dt><b>ABK</b></dt>
-	<dd>(See <i><u>Abalakov jump</u></i><a href="#des:AbalakovJump">*</a>).</dd>
+	<dd> (See <i><u>Abalakov jump</u></i><a href="#des:AbalakovJump">*</a>).</dd>
+ <dt><b>Bell</b></dt>
+	<dd> Chronojump uses a software bell as an auditive and configurable
+way to tell the <i><u>Jumper<a href="#des:Jumper">*</a></u></i> or <i><u>Runner</u></i><a href="#des:Runner">*</a>
+info about the parameters of the <i><u>event</u></i><a href="#des:Event">*</a>:
+<i><u>TC</u></i><a href="#des:TC">*</a>, <i><u>TF</u></i><a href="#des:TF">*</a>,
+TF/TC and time.</dd>
  <dt><b><a name="des:Chronojump">
 </a>Chronojump</b></dt>
-	<dd>Sometimes referred as the free
+	<dd> Sometimes referred as the free
 (GPL) software for managing the data coming from the <i><u>Chronopic</u></i><a href="#des:Chronopic">*</a>
 <i><u>chronometer</u></i><a href="#des:Chronometer">*</a>, and sometimes
 referred as the whole project: Software, Hardware, documentation,
 website, ...</dd>
  <dt><b><a name="des:Chronometer">
 </a>Chronometer</b></dt>
-	<dd>Instrument used for measuring
+	<dd> Instrument used for measuring
 time. In Chronojump project we use <i><u>Chronopic</u></i><a href="#des:Chronopic">*</a>.</dd>
  <dt><b><a name="des:Chronopic">
 </a>Chronopic</b></dt>
-	<dd>Open Hardware used for recording
+	<dd> Open Hardware used for recording
 and managing the changes detected on the <i><u>Platform</u></i><a href="#des:Platform">*</a>.
 At this moment there are two Chronopic models (both using same firmware): 
 
@@ -99,30 +111,35 @@ out how to build it <a href="http://www.gnome.org/projects/chronojump/constructi
 currently there are no manufacturers selling this model.
 <div class="p"><!----></div>
 </li>
-</ul>
+</ul></dd>
+</dl>
 
+<center>
 <img src="http://www.gnome.org/projects/chronojump/images/chronopic_foto.jpg">
-</dd>
+
+<div class="p"><!----></div>
+</center>
+<dl compact="compact">
  <dt><b>CMJ</b></dt>
-	<dd>(See <i><u>Countermovement jump</u></i><a href="#des:CountermovementJump">*</a>).</dd>
+	<dd> (See <i><u>Countermovement jump</u></i><a href="#des:CountermovementJump">*</a>).</dd>
  <dt><b><a name="des:CountermovementJump">
 </a>Countermovement&nbsp;Jump</b></dt>
-	<dd>(abbreviated
+	<dd> (abbreviated
 "CMJ") a kind of <i><u>simple jump<a href="#des:Jump">*</a></u></i>
 (we recommend not to translate the term).</dd>
  <dt><b><a name="des:Contactplatform">
 </a>Contact&nbsp;platform</b></dt>
-	<dd>(See <i><u>Platform</u></i><a href="#des:Platform">*</a>).</dd>
+	<dd> (See <i><u>Platform</u></i><a href="#des:Platform">*</a>).</dd>
  <dt><b><a name="des:Contacttime">
 </a>Contact&nbsp;time</b></dt>
-	<dd>Time where the person is in
-the platform. Also referred as <i><u>Time of Contact</u></i><a href="#des:Timeofcontact">*</a>
+	<dd> Time where the person is
+in the platform. Also referred as <i><u>Time of Contact</u></i><a href="#des:Timeofcontact">*</a>
 or <i><u>TC</u></i><a href="#des:TC">*</a>.</dd>
  <dt><b>DJ</b></dt>
-	<dd>(See <i><u>Drop jump</u></i><a href="#des:DropJump">*</a>).</dd>
+	<dd> (See <i><u>Drop jump</u></i><a href="#des:DropJump">*</a>).</dd>
  <dt><b><a name="des:DropJump">
 </a>Drop&nbsp;Jump</b></dt>
-	<dd>(abbreviated "DJ") a kind
+	<dd> (abbreviated "DJ") a kind
 of <i><u>simple jump<a href="#des:Jump">*</a></u></i> where there's a
 previous fall from a determined height and then jumps. On this jump,
 the recorded data is one <i><u>contact&nbsp;time</u></i><a href="#des:Contacttime">*</a>,
@@ -130,24 +147,25 @@ and one <i><u>flight&nbsp;time<a href="#des:Flightime">*</a></u></i>. (we
 recommend not to translate the term).</dd>
  <dt><b><a name="des:Event">
 </a>Event</b></dt>
-	<dd>Simplification of "time event" where
-we refer to something that's measured by time. On Chronojump we use
-this word for referring <i><u>Jumps</u></i><a href="#des:Jump">*</a>,
-<i><u>Runs</u></i><a href="#des:Run">*</a> or <i><u>Pulses</u></i><a href="#des:Pulse">*</a>.</dd>
+	<dd> Simplification of "time event"
+where we refer to something that's measured by time. On Chronojump
+we use this word for referring <i><u>Jump</u></i><a href="#des:Jump">*</a>,
+<i><u>Run</u></i><a href="#des:Run">*</a>, <i><u>Reaction
+time<a href="#des:Reaction-time">*</a></u></i> or <i><u>Pulse</u></i><a href="#des:Pulse">*</a>.</dd>
  <dt><b><a name="des:Finish">
 </a>Finish</b></dt>
-	<dd>Action of ending an event by pressing
+	<dd> Action of ending an event by pressing
 a button. This action can be done for finishing an unlimited <i><u>event</u></i><a href="#des:Event">*</a>,
 or making shorter a <i><u>reactive&nbsp;jump</u></i><a href="#des:Jump">*</a>,
 <i><u>intervallic&nbsp;run<a href="#des:Run">*</a></u></i> or <i><u>pulse</u></i><a href="#des:Pulse">*</a>.</dd>
  <dt><b><a name="des:Flightime">
 </a>Fligh&nbsp;time</b></dt>
-	<dd>Time where the person is not in
-contact with the platform. Also referred as Time of Flight<a href="#des:Timeofflight">*</a>
+	<dd> Time where the person is not
+in contact with the platform. Also referred as Time of Flight<a href="#des:Timeofflight">*</a>
 or TF<a href="#des:TF">*</a>.</dd>
  <dt><b><a name="des:Jump">
 </a>Jump</b></dt>
-	<dd>jump is one of the tree <em><u>events<a href="#des:Event">*</a></u></em>
+	<dd> jump is one of the tree <em><u>events<a href="#des:Event">*</a></u></em>
 that are currently evaluated. Also there are two kind of jumps: <em>Simple</em>
 and <em>Reactive</em>. 
 
@@ -155,15 +173,16 @@ and <em>Reactive</em>.
 
 <dl compact="compact">
  <dt><b>Simple&nbsp;jump:</b></dt>
-	<dd>jump that have only one <i><u>flight time<a href="#des:Flightime">*</a></u></i>.
-On this jump, jumper starts and ends inside the <i><u>platform</u></i><a href="#des:Platform">*</a>.
-There's a special type called <i><u>Drop&nbsp;Jump<a href="#des:DropJump">*</a></u></i>
-where jumper falls down from a predefined height (called "falling
-height"), and then jumps. In this case, the recorded data is one
-<i><u>contact&nbsp;time</u></i><a href="#des:Contacttime">*</a>, and one <i><u>flight&nbsp;time<a href="#des:Flightime">*</a></u></i>.</dd>
+	<dd> jump that have only one <i><u>flight
+time<a href="#des:Flightime">*</a></u></i>. On this jump, jumper starts and ends inside
+the <i><u>platform</u></i><a href="#des:Platform">*</a>. There's a special
+type called <i><u>Drop&nbsp;Jump<a href="#des:DropJump">*</a></u></i> where
+jumper falls down from a predefined height (called "falling height"),
+and then jumps. In this case, the recorded data is one <i><u>contact&nbsp;time</u></i><a href="#des:Contacttime">*</a>,
+and one <i><u>flight&nbsp;time<a href="#des:Flightime">*</a></u></i>.</dd>
  <dt><b>Reactive&nbsp;jump</b></dt>
-	<dd>(abbreviated "RJ") this jump is described as
-a number of repetitive or reactive jumps performed consecutively.
+	<dd> (abbreviated "RJ") this jump is described
+as a number of repetitive or reactive jumps performed consecutively.
 All the <i><u>contact&nbsp;times</u></i><a href="#des:Contacttime">*</a>,
 and <i><u>flight&nbsp;times<a href="#des:Flightime">*</a></u></i> are recorded.
 It's common to try to maintain as much time as possible low contact
@@ -187,55 +206,80 @@ and height flight time. This jump is limited (ended) by:
 </dl></dd>
  <dt><b><a name="des:Jumper">
 </a>Jumper</b></dt>
-	<dd>The name of a <i><u>person<a href="#des:Person">*</a></u></i>
+	<dd> The name of a <i><u>person<a href="#des:Person">*</a></u></i>
 is called when does a <i><u>jump</u></i><a href="#des:Jump">*</a>.</dd>
  <dt><b><a name="des:Loadperson">
 </a>Load&nbsp;person</b></dt>
-	<dd>As all data is stored in a database,
-there's no need to define or create a new <i><u>person<a href="#des:Person">*</a></u></i>
+	<dd> As all data is stored in
+a database, there's no need to define or create a new <i><u>person<a href="#des:Person">*</a></u></i>
 twice, if one person is evaluated in one <i><u>session</u></i><a href="#des:Session">*</a>,
 and we want to re-evaluate in another session, we call this action
 "Load Person", and it has to be understood as "To use this
 known person also in current session".</dd>
  <dt><b><a name="des:Person">
 </a>Person</b></dt>
-	<dd>The human who executes the tests. Depending
+	<dd> The human who executes the tests. Depending
 on what he is doing, may be called as <i><u>Jumper<a href="#des:Jumper">*</a></u></i>
 or <i><u>Runner<a href="#des:Runner">*</a></u></i>. Person does not receive
 a special name when is performing <i><u>pulse<a href="#des:Pulse">*</a></u></i>
 tests.</dd>
  <dt><b><a name="des:Platform">
 </a>Platform</b></dt>
-	<dd>It's an instrument used for knowing
+	<dd> It's an instrument used for knowing
 if a person is on the floor or in the air. A person can have two states
 on the platform: inside or outside. On <i><u>jumps</u></i><a href="#des:Jump">*</a>,
 the time that a person is in the air (<i><u>flight time</u></i><a href="#des:Flightime">*</a>)
 is used to find the height of the Center of Gravity of the jumper.
 On <i><u>Runs<a href="#des:Run">*</a></u></i> the time that the person
 is not in the platform is used to determine the speed. The platform
-can be easily built following this instructions: <a href="http://www.gnome.org/projects/chronojump/construction_contact_platform.html"><tt>http://www.gnome.org/projects/chronojump/construction_contact_platform.html</tt></a>
+can be easily built following this instructions: <a href="http://www.gnome.org/projects/chronojump/construction_contact_platform.html"><tt>http://www.gnome.org/projects/chronojump/construction_contact_platform.html</tt></a></dd>
+</dl>
+
+<center>
+<img src="http://www.gnome.org/projects/chronojump/images/plataforma_contactos_final.jpg">
 
 <div class="p"><!----></div>
-<img src="http://www.gnome.org/projects/chronojump/images/plataforma_contactos_final.jpg">
-</dd>
+</center>
+<dl compact="compact">
  <dt><b><a name="des:Pulse">
 </a>Pulse</b></dt>
-	<dd>We call 'pulse' to the ability of a person
+	<dd> We call 'pulse' to the ability of a person
 on following a rhythm (predefined or natural), and when this rhythm
 is primary: only one repeating beat. The pulse contains a succession
 of equal beats limited by time or unlimited (instructor decides when
 to stop). On pulses we want to know the number of beats per second
 and the rhythm of the pulse as time passes.</dd>
+</dl>
+
+<center>
+<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_pulse_300.png">
+
+<div class="p"><!----></div>
+</center>
+<dl compact="compact">
+ <dt><b><a name="des:Reaction-time">
+</a>Reaction&nbsp;time:</b></dt>
+	<dd> time between a signal
+(chronopic light) and a response (user clicks on Chronopic or touches
+platform).</dd>
+</dl>
+
+<center>
+<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_reaction_time_300.png">
+
+<div class="p"><!----></div>
+</center>
+<dl compact="compact">
  <dt><b><a name="des:Report">
 </a>Report</b></dt>
-	<dd>A detailed document containing the data
-of the <i><u>session</u></i><a href="#des:Session">*</a> (date, place,
+	<dd> A detailed document containing the
+data of the <i><u>session</u></i><a href="#des:Session">*</a> (date, place,
 comments), the <i><u>persons<a href="#des:Person">*</a></u></i> who participated,
 the <i><u>events<a href="#des:Event">*</a></u></i> developed, and <i><u>statistics<a href="#des:Statistic">*</a></u></i>
 evaluated.</dd>
  <dt><b><a name="des:Run">
 </a>Run</b></dt>
-	<dd>Run is one of the tree <em><u>events<a href="#des:Event">*</a></u></em>
+	<dd> Run is one of the tree <em><u>events<a href="#des:Event">*</a></u></em>
 that are currently evaluated. Also there are two kind of runs: <em>Simple</em>
 and Intervallic. 
 
@@ -243,15 +287,15 @@ and Intervallic.
 
 <dl compact="compact">
  <dt><b>Simple&nbsp;run:</b></dt>
-	<dd>run that have only one <i><u>flight time<a href="#des:Flightime">*</a></u></i>.
-On this run, runner starts on the <i><u>platform</u></i><a href="#des:Platform">*</a>,
+	<dd> run that have only one <i><u>flight
+time<a href="#des:Flightime">*</a></u></i>. On this run, runner starts on the <i><u>platform</u></i><a href="#des:Platform">*</a>,
 or a few meters before it. The run stop when the runner arrives to
 a second platform. It can be also done with only one platform in a
 circular track. The ony registered data is the time that the person
 is between the two platforms. This time is normally converted to an
 average speed, knowing the distance between both.</dd>
  <dt><b>Intervallic&nbsp;run:</b></dt>
-	<dd>this run is described as a number of individual
+	<dd> this run is described as a number of individual
 runs called <i><u>tracks<a href="#des:Track">*</a></u></i>. Every time
 each track are recorded, and it's also converted to speed, as all
 the tracks have the same distance. This run is limited (ended) by:
@@ -271,47 +315,52 @@ the tracks have the same distance. This run is limited (ended) by:
 <div class="p"><!----></div>
 </li>
 </ul></dd>
+</dl></dd>
 </dl>
 
-<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_two_platforms.png">
-</dd>
+<center>
+<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_run_300.png">
+
+<div class="p"><!----></div>
+</center>
+<dl compact="compact">
  <dt><b><a name="des:Runner">
 </a>Runner</b></dt>
-	<dd>The name of a <i><u>person<a href="#des:Person">*</a></u></i>
+	<dd> The name of a <i><u>person<a href="#des:Person">*</a></u></i>
 is called when does a <i><u>run</u></i><a href="#des:Run">*</a>.</dd>
  <dt><b>RJ</b></dt>
-	<dd>(See <i><u>reactive&nbsp;jump</u></i><a href="#des:Jump">*</a>).</dd>
+	<dd> (See <i><u>reactive&nbsp;jump</u></i><a href="#des:Jump">*</a>).</dd>
  <dt><b><a name="des:Session">
 </a>Session</b></dt>
-	<dd>(See <i><u>Context: An Sports
-Evaluation<a href="#sub:Context:-An-sports">*</a></u></i>).</dd>
+	<dd> (See <i><u>Context: An
+Sports Evaluation<a href="#sub:Context:-An-sports">*</a></u></i>).</dd>
  <dt><b>SJ</b></dt>
-	<dd>(See <i><u>Squat jump</u></i><a href="#des:SquatJump">*</a>).</dd>
+	<dd> (See <i><u>Squat jump</u></i><a href="#des:SquatJump">*</a>).</dd>
  <dt><b><a name="des:SquatJump">
 </a>Squat&nbsp;Jump</b></dt>
-	<dd>(abbreviated "SJ") a kind
-of <i><u>simple jump<a href="#des:Jump">*</a></u></i> (we recommend not
-to translate the term).</dd>
+	<dd> (abbreviated "SJ") a
+kind of <i><u>simple jump<a href="#des:Jump">*</a></u></i> (we recommend
+not to translate the term).</dd>
  <dt><b><a name="des:Statistic">
 </a>Statistic</b></dt>
-	<dd>Evaluation of one or more tests
+	<dd> Evaluation of one or more tests
 presented on a tabular and/or graphical way.</dd>
  <dt><b><a name="des:TC">
 </a>TC</b></dt>
-	<dd>(See <i><u>contact&nbsp;time<a href="#des:Contacttime">*</a></u></i>).</dd>
+	<dd> (See <i><u>contact&nbsp;time<a href="#des:Contacttime">*</a></u></i>).</dd>
  <dt><b><a name="des:TF">
 </a>TF</b></dt>
-	<dd>(See <i><u>flight&nbsp;time<a href="#des:Flightime">*</a></u></i>).</dd>
+	<dd> (See <i><u>flight&nbsp;time<a href="#des:Flightime">*</a></u></i>).</dd>
  <dt><b><a name="des:Timeofcontact">
 </a>Time&nbsp;of&nbsp;contact</b></dt>
-	<dd>(See <i><u>contact&nbsp;time<a href="#des:Contacttime">*</a></u></i>).</dd>
+	<dd> (See <i><u>contact&nbsp;time<a href="#des:Contacttime">*</a></u></i>).</dd>
  <dt><b><a name="des:Timeofflight">
 </a>Time&nbsp;of&nbsp;flight</b></dt>
-	<dd>(See <i><u>flight&nbsp;time<a href="#des:Flightime">*</a></u></i>).</dd>
+	<dd> (See <i><u>flight&nbsp;time<a href="#des:Flightime">*</a></u></i>).</dd>
  <dt><b><a name="des:Track">
 </a>Track</b></dt>
-	<dd>Is the distance between two platforms in
-a Intervallic <i><u>Run</u></i><a href="#des:Run">*</a>.</dd>
+	<dd> Is the distance between two platforms
+in a Intervallic <i><u>Run</u></i><a href="#des:Run">*</a>.</dd>
 </dl>
 
 <div class="p"><!----></div>
@@ -320,5 +369,5 @@ a Intervallic <i><u>Run</u></i><a href="#des:Run">*</a>.</dd>
 T<sub><font size="-1">E</font></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><font size="-1">T</font></sub>H</a>,
-version 3.67.<br />On  3 Oct 2006, 21:44.</small>
+version 3.67.<br />On 22 Mar 2007, 18:26.</small>
 </html>
